# willitrun

./: .gitignore  CONTRIBUTING.md  DATA_SOURCES.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  missing_device.md  missing_model.md  wrong_benchmark.md
.github/workflows/: ci.yml
data/: benchmarks.curated.yaml  benchmarks.db  benchmarks.meta.json  devices.yaml  models.yaml
data/normalized/: geerlingguy.jsonl  llama_cpp_cuda.jsonl  localscore.jsonl  mac_llm_bench.jsonl  mlperf.jsonl  nvidia_jetson.jsonl  ultralytics.jsonl  ultralytics_gpu.jsonl  xiongjieddai.jsonl
demo/: willitrun-demo.tape
scripts/: build_db.py  gpu_map.py  ingest_geerlingguy.py  ingest_llama_cpp.py  ingest_localscore.py  ingest_mac_llm_bench.py  ingest_mlperf.py  ingest_nvidia_jetson.py  ingest_ultralytics.py  ingest_ultralytics_gpu.py  ingest_xiongjieddai.py  run_pipeline.py
tests/: test_coverage.py  test_estimator.py  test_estimator_tier2_safety.py  test_gpu_map.py  test_interactive.py  test_loader.py  test_profiler.py  test_recommender.py  test_schemas.py
willitrun/: __init__.py  _data.py  cli.py  data_access.py  display.py  estimator.py  interactive.py  loader.py  profiler.py  ranker.py  recommender.py  schemas.py
willitrun/data/: benchmarks.db  benchmarks.meta.json  devices.yaml  models.yaml
willitrun/pipeline/: __init__.py  config.py  schema.py
